<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Plant Zone</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="name" tools:ignore="DuplicateDefinition">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="register">REGISTER</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="plant_zone">Plant Zone</string>
    <string name="flower_girl">flower girl</string>
    <string name="flowergirl2">flowergirl2</string>
    <string name="welcome_to_plant_zone">WELCOME TO PLANT ZONE</string>
    <string name="register_wel">Register</string>
    <string name="we_are_happy_to_have_you_get_ready_to_buy_fresh_flowers_indoor_plants_outdoor_plants_and_so_much_more">We Are Happy To Have You!! Get Ready To Buy Fresh Flowers, Indoor Plants, Outdoor Plants And So Much More!</string>
    <string name="login">LogIn</string>
    <string name="something">something</string>
    <string name="hey">hey</string>
    <string name="registration">registration</string>
    <string name="explore_exotic_plants">Explore Exotic Plants</string>
    <string name="flower_plants">Flower Plants</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="my_orders">My Orders</string>
    <string name="category">Category</string>
    <string name="offers">Offers</string>
    <string name="my_cart">My Cart</string>
    <string name="new_products">New Products</string>
    <string name="search_your_item_here">Search Your Item Here</string>
    <string name="popular_plants">Popular Plants</string>
    <string name="view_all">View All</string>
    <string name="popular_products">Popular Products</string>
    <string name="rating">rating</string>

    <string name="discount_20_off">Discount 20% Off</string>
    <string name="explore_categories">Explore Categories</string>
    <string name="category_name">Category Name</string>
    <string name="recommended">Recommended</string>

    <string name="product_name">Product Name</string>
    <string name="none">none</string>
    <string name="_5_0">5.0</string>
    <string name="your_name">Your Name</string>
    <string name="your_email">Your Email</string>
    <string name="your_number">Your Number</string>
    <string name="update">Update</string>
    <string name="your_address">Your Address</string>
    <string name="description">Description</string>
    <string name="price_tk1">Price Tk </string>
    <string name="_30">30</string>
    <string name="arrow">arrow</string>
    <string name="price_tk">Price Tk</string>


</resources>