<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="8dp"
    app:strokeWidth="2dp"
    app:strokeColor="@color/purple_700"
    app:cardCornerRadius="25dp"
    app:cardElevation="5dp"
    android:layout_margin="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:orientation="horizontal">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/view_img"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="centerInside"
            android:src="@drawable/cutmypic4"
            app:riv_corner_radius="14dp" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/view_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/name"
                android:textColor="@color/purple_700"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/view_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:textColor="@color/dark_grey"
                android:maxLines="2"
                android:singleLine="false"
                android:text="@string/description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_tk"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/view_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/_30"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="5dp"
                    android:contentDescription="@string/none"
                    android:src="@drawable/ratingbar" />

                <TextView
                    android:id="@+id/view_rating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_grey"
                    android:layout_marginTop="3dp"
                    android:layout_weight="1"
                    android:text="@string/_5_0" />

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_arrow_forward"
                android:contentDescription="@string/arrow" />

        </LinearLayout>

    </LinearLayout>


</com.google.android.material.card.MaterialCardView>