<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:elevation="8dp"
    app:strokeWidth="2dp"
    app:strokeColor="#80CBC4"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_margin="5dp"
    app:cardCornerRadius="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="5dp">
<com.makeramen.roundedimageview.RoundedImageView
    android:layout_width="230dp"
    android:layout_height="170dp"
    android:id="@+id/pop_img"
    app:riv_corner_radius="14dp"
    android:src="@drawable/girl_cart"/>
        <!--android:scaleType="centerCrop" -->

    <TextView
        android:id="@+id/pop_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popular_products"
        android:textColor="#008080"
        android:textSize="19sp"
        android:textStyle="bold"
        />

        <TextView
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:ellipsize="end"
            android:textColor="@color/dark_grey"
            android:id="@+id/pop_des"
            android:maxLines="1"
            android:singleLine="true"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:src="@drawable/ratingbar"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/rating" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/_5_0"
                android:textColor="@color/dark_grey"
                android:id="@+id/pop_rating"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pop_dis"
                android:layout_marginTop="3dp"
                android:text="@string/discount_20_off"
                android:textColor="#E3242B"
                android:textStyle="bold"
                android:gravity="end"
                android:layout_weight="1"/>

        </LinearLayout>


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>