<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:elevation="8dp"
    app:strokeWidth="2dp"
    app:strokeColor="#99F19D"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    app:cardElevation="3dp"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/rec_img"
            android:src="@drawable/cashier"
            android:contentDescription="@string/none" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rec_name"
            android:textColor="#008080"
            android:text="@string/product_name"
            android:textSize="19sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:id="@+id/rec_des"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/dark_grey"
            android:text="@string/description"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_marginStart="5dp"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:src="@drawable/ratingbar"
                android:contentDescription="@string/none" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rec_rating"
                android:textColor="@color/dark_grey"
                android:text="@string/_5_0"
                android:layout_weight="1"
                android:layout_marginTop="3dp"/>

        </LinearLayout>


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>