<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.WelcomeActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="411dp"
        android:layout_height="117dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/welcome_to_plant_zone"
        android:textColor="#29AB87"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="410dp"
        android:layout_height="341dp"
        android:contentDescription="@string/something"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.315"
        app:srcCompat="@drawable/shop" />

    <TextView
        android:id="@+id/LogIn_wel"
        android:layout_width="153dp"
        android:layout_height="44dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="12dp"
        android:text="@string/login"
        android:textColor="#29AB87"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Register_wel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.666"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/Register_wel"
        android:layout_width="146dp"
        android:layout_height="40dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="172dp"
        android:text="@string/register_wel"
        android:textColor="#29AB87"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/LogIn_wel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/LogIn_wel"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="410dp"
        android:layout_height="110dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/we_are_happy_to_have_you_get_ready_to_buy_fresh_flowers_indoor_plants_outdoor_plants_and_so_much_more"
        android:textColor="#29AB87"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Register_wel"
        app:layout_constraintVertical_bias="0.387"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="48dp"
        android:layout_height="33dp"
        android:contentDescription="@string/hey"
        app:layout_constraintBottom_toBottomOf="@+id/LogIn_wel"
        app:layout_constraintEnd_toStartOf="@+id/LogIn_wel"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/LogIn_wel"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/key1" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="31dp"
        android:layout_height="34dp"
        android:contentDescription="@string/registration"
        app:layout_constraintBottom_toBottomOf="@+id/Register_wel"
        app:layout_constraintEnd_toStartOf="@+id/Register_wel"
        app:layout_constraintHorizontal_bias="0.588"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/Register_wel"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/registration" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.1"
        android:scaleX=".5"
        android:scaleY=".5"/>

</androidx.constraintlayout.widget.ConstraintLayout>